# agentic-document-understanding

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_documents.py  routes_graph.py  routes_health.py  routes_kpi.py  routes_leads.py  routes_query.py
backend/app/core/: config.py
backend/app/models/: enums.py  responses.py  schemas.py
backend/app/services/: chunking.py  classifier.py  document_registry.py  email_drafting.py  embeddings.py  extraction.py  kpi.py  kpi_eval.py  lead_research.py  ocr.py  pdf_parser.py  rag.py  storage.py  text_cleaning.py  validation.py
backend/app/workflows/: graph.py  nodes.py  state.py  visualize.py
backend/backend/app/data/processed/: document_registry.json  kpi_records.json
frontend/: package-lock.json
frontend/app/: layout.tsx
frontend/app/ask/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/kpis/: page.tsx
frontend/app/leads/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: agent-trace-panel.tsx  document-history.tsx  kpi-chart.tsx  kpi-table.tsx  latest-agent-run.tsx  lead-card.tsx  query-form.tsx  sidebar.tsx  stat-card.tsx  topbar.tsx  upload-form.tsx
frontend/lib/: api.ts
